# html-compose

./: README.md  changelog.txt  pyproject.toml
.github/workflows/: run-tests.yml
doc/ideas/: 01_iterator.md  02_base_element.md  03_code_generator.md  04_attrs.md
src/html_compose/: __init__.py  base_attribute.py  base_element.py  base_types.py  cli.py  custom_element.py  document.py  elements.py  translate_html.py  util_funcs.py
src/html_compose/attributes/: __init__.py  a_attrs.py  abbr_attrs.py  area_attrs.py  audio_attrs.py  button_attrs.py  data_attrs.py  details_attrs.py  dfn_attrs.py  dialog_attrs.py  fieldset_attrs.py  form_attrs.py  global_attrs.py  iframe_attrs.py  img_attrs.py  input_attrs.py  link_attrs.py  map_attrs.py  meta_attrs.py  ol_attrs.py  optgroup_attrs.py  option_attrs.py  output_attrs.py  script_attrs.py  select_attrs.py  slot_attrs.py  style_attrs.py  template_attrs.py  textarea_attrs.py  th_attrs.py  track_attrs.py  video_attrs.py
src/html_compose/elements/: __init__.py  a_element.py  abbr_element.py  address_element.py  area_element.py  article_element.py  aside_element.py  audio_element.py  b_element.py  base_element.py  bdi_element.py  bdo_element.py  blockquote_element.py  body_element.py  br_element.py  button_element.py  canvas_element.py  caption_element.py  cite_element.py  code_element.py  col_element.py  colgroup_element.py  data_element.py  (+91 more)
tests/: test_assumptions.py  test_element.py  test_importer.py  test_translator.py
tools/: generate_attributes.py  generate_elements.py  generator_common.py  spec_generator.py
(+7 files in other folders)
